samples/_failures_safe/1761250227_28de90_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b09ff17.c: In function ‘main’:
./samples/SAFE/__tmp_4b09ff17.c:162:17: error: ‘add_mat’ undeclared (first use in this function)
  162 |                 add_mat
      |                 ^~~~~~~
./samples/SAFE/__tmp_4b09ff17.c:162:17: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4b09ff17.c:162:24: error: expected ‘;’ at end of input
  162 |                 add_mat
      |                        ^
      |                        ;
./samples/SAFE/__tmp_4b09ff17.c:162:17: error: expected declaration or statement at end of input
  162 |                 add_mat
      |                 ^~~~~~~
./samples/SAFE/__tmp_4b09ff17.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b09ff17.c:162:17: error: expected declaration or statement at end of input
